--- a/README
+++ b/README
@@ -10,6 +10,10 @@ ActiveTokyoCabinet depend on TokyoCabinet.
 
 see http://1978th.net/tokyocabinet/ .
 
+== Project Page
+
+http://rubyforge.org/projects/activetokyocabi
+
 == Install
 
 gem install zipruby
