--- a/README
+++ b/README
@@ -8,7 +8,7 @@ ActiveTokyoCabinet is a library for using TokyoCabinet under ActiveRecord.
 
 ActiveTokyoCabinet depend on TokyoCabinet.
 
-see http://1978th.net/tokyocabinet/ .
+see {http://1978th.net/tokyocabinet}[link:http://1978th.net/tokyocabinet/].
 
 == Project Page
 
@@ -17,6 +17,8 @@ http://rubyforge.org/projects/activetokyocabi
 == Install
 
 gem install activetokyocabinet
+
+see {http://gemcutter.org/gems/activetokyocabinet/}[link:http://gemcutter.org/gems/activetokyocabinet/].
 
 == Example
 === database.yml
